--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
             perspiciatis ab explicabo placeat magni eos provident, voluptates delectus asperiores! Excepturi veniam
             reprehenderit, ipsa numquam sapiente eveniet quod doloremque neque? Dolor debitis, sapiente laudantium
             inventore placeat alias. Possimus labore eum quidem. Et, dolorum?</p>
-            <p>First commit</p>
-           
         <h2>Soud Haroon</h2>
-
-        <h3>carlos</h3>
+        <h3>Kapil</h3>
     </main>
     <footer></footer>
 </body>
