--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             reprehenderit, ipsa numquam sapiente eveniet quod doloremque neque? Dolor debitis, sapiente laudantium
             inventore placeat alias. Possimus labore eum quidem. Et, dolorum?</p>
         <h2>Soud Haroon</h2>
-        <h3>Kapil</h3>
+        <h3>Kapil Pokhriyal</h3>
     </main>
     <footer></footer>
 </body>
