--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Alley</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer type="module" src="src/app.js"></script>
+    <script defer type="module" src="./app.js"></script>
 </head>
 
 <body>
