Modify create-account page
Change the header

--- a/html/create-account.html
+++ b/html/create-account.html
@@ -21,7 +21,7 @@
              <li><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
          </ul>
      </nav>
-     <h1>CREATE ACCOUNT</h1>
+     <h1>CREATE AN ACCOUNT</h1>
   </header>
 
   <main>
