--- a/html/demo_book.html
+++ b/html/demo_book.html
@@ -21,13 +21,13 @@
         <div class="booking-content-wrapper">
             <div class="request-div">
                 <h2>Request:</h2>
-                <div id="request">
+                <div id="request-view">
                     <!-- Booking items will be dynamically added here -->
                 </div>
             </div>
             <div class="myBooking-div">
                 <h2>My Bookings:</h2>
-                <div id="booking">
+                <div id="booking-view">
                     <!-- Booking items will be dynamically added here -->
                 </div>
             </div>
@@ -60,7 +60,7 @@
 
         <!-- HTML template for a booking item -->
         <template id="booking-template">
-            <div class="booking-item" data-uid="">
+            <div class="booking-item">
                 <div class="booking-header">
                     <h2 class="booking-name"></h2>
                 </div>
@@ -72,7 +72,7 @@
                     <p><strong>User Type:</strong> <span class="booking-user-type"></span></p>
                     <p><strong>Offer:</strong> <span class="booking-offer"></span></p>
                     <p><strong>Address:</strong> <span class="booking-address"></span></p>
-                    <p><strong>Request Date:</strong> <span class="booking-req-date"></span></p>
+                    <!-- <p><strong>Request Date:</strong> <span class="booking-req-date"></span></p> -->
                     <p><strong>Response:</strong> <span class="booking-response"></span></p>
                 </div>
             </div>
