--- a/html/demo_book.html
+++ b/html/demo_book.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- by Soud -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Booking</title>
     <link rel="stylesheet" href="../css/demo_book.css">
-    <script type="module" src="../javascript/booking.js"></script>
+    <script type="module" src="../javascript/booking.js" defer></script>
 </head>
 
 <body>
@@ -18,6 +19,11 @@
             <input type="text" id="searchInput" placeholder="Search...">
             <button type="button" id="searchButton">Search</button>
         </div>
+        <!-- button's -->
+        <div class="myButtonDiv">
+            <button onclick="makeRequest()">Make request</button>
+        </div>
+        <!-- booking content -->
         <div class="booking-content-wrapper">
             <div class="request-div">
                 <h2>Request:</h2>
@@ -31,56 +37,6 @@
                     <!-- Booking items will be dynamically added here -->
                 </div>
             </div>
-        </div>
-
-        <!-- HTML template for a booking request item -->
-        <template id="request-template">
-            <div class="request-item">
-                <div class="request-header">
-                    <h2 class="request-name"></h2>
-                </div>
-                <div class="request-body">
-                    <p><strong>Email:</strong> <span class="request-email"></span></p>
-                    <p><strong>Phone:</strong> <span class="request-phone"></span></p>
-                    <p><strong>Business Name:</strong> <span class="request-business-name"></span></p>
-                    <p><strong>Age:</strong> <span class="request-age"></span></p>
-                    <p><strong>User Type:</strong> <span class="request-user-type"></span></p>
-                    <p><strong>Offer:</strong> <span class="request-offer"></span></p>
-                    <p><strong>Address:</strong> <span class="request-address"></span></p>
-                    <p><strong>Request Date:</strong> <span class="request-req-date"></span></p>
-                    <!-- <p><strong>Request uid:</strong> <span class="request-uid"></span></p> -->
-                    <div class="responseDiv">
-                        <button
-                            onclick="bookingComfirmed(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))">Accept</button>
-                        <button>decline</button>
-                    </div>
-                </div>
-            </div>
-        </template>
-
-        <!-- HTML template for a booking item -->
-        <template id="booking-template">
-            <div class="booking-item">
-                <div class="booking-header">
-                    <h2 class="booking-name"></h2>
-                </div>
-                <div class="booking-body">
-                    <p><strong>Email:</strong> <span class="booking-email"></span></p>
-                    <p><strong>Phone:</strong> <span class="booking-phone"></span></p>
-                    <p><strong>Business Name:</strong> <span class="booking-business-name"></span></p>
-                    <p><strong>Age:</strong> <span class="booking-age"></span></p>
-                    <p><strong>User Type:</strong> <span class="booking-user-type"></span></p>
-                    <p><strong>Offer:</strong> <span class="booking-offer"></span></p>
-                    <p><strong>Address:</strong> <span class="booking-address"></span></p>
-                    <!-- <p><strong>Request Date:</strong> <span class="booking-req-date"></span></p> -->
-                    <p><strong>Response:</strong> <span class="booking-response"></span></p>
-                </div>
-            </div>
-        </template>
-
-        <!-- button's -->
-        <div class="myButtonDiv">
-            <button onclick="makeRequest()">Make request</button>
         </div>
     </div>
 </body>
