--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <main>
-            <h1>Artist Alley</h1>
+            <h1>Artist Alley - Find, Book & Celibrate</h1>
             <input id="loginBtn" type="button" value="Login">
             <input id="signupBtn" type="button" value="Signup">
         </main>
