Artist profile-parul

--- a/html/parul.html
+++ b/html/parul.html
@@ -1,11 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Parul -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Artist Profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="../css/parul.css">
 </head>
+
 <body>
-    
+    <header>
+
+        <div class="headerContent">
+            <div class="site-heading">
+                <img src="../src/Untitled-9.png" alt="logo">
+                <h1>artist alley</h1>
+            </div>
+
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="Home">Home</a></li>
+                        <li><a href="About Us">About us</a></li>
+                        <li><a href="">Book an artist</a></li>
+                        <li><a href="">Join our artist</a></li>
+                        <li class="login-btn"><a href="">Login</a></li>
+                    </ul>
+                </nav>
+                <div class="search"><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></div>
+                <div class="menuBtn">
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </div>
+
+            <h2>Artist Profile <span>John Doe</span></h2>
+
+        </div>
+
+    </header>
+
+    <main>
+
+        <div class="mainContent">
+
+            <div class="artist-descp">
+
+                <div class="about-artist">
+
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+
+                    <div class="artist-briefing">
+                        <img src="" alt="">
+                        <p>Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances and
+                            soulful
+                            sound.</p>
+                    </div>
+
+                    <ul>
+                        <li>Priving starts at: <span>$ 125</span></li>
+                        <li>Pick me for: <span>Rock and Jazz</span></li>
+                        <li>Location: <span>Vancouvver, BC</span></li>
+                    </ul>
+
+                </div>
+                <div class="artist-perf">
+                    <p>I have more 15 years of experience being part of some well reconized bands and making
+                        presentatiosn
+                        around the country. I'm a dinamyc and versatile guitarist known for my electrifying performances
+                        and
+                        soulful sound. I have my own equipment and transportation.</p>
+
+                    <a href="./parul-calendar.html">Check calendar</a>
+                    <a href="./parul-booking.html">Book</a>
+                </div>
+
+                <div class="artist-work">
+                    <div class="images">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="chatBtn">
+                    <a href="./book-chat.html">Chat</a>
+                </div>
+            </div>
+
+            <div class="artist-reviews">
+                <h2>Reviews</h2>
+
+                <div class="review-list">
+                    <img src="" alt="">
+                    <h3>Amazing</h3>
+                    <p class="name">Amanda Banes</p>
+                    <p>Loved the energy and songs. My guests loved it, the music is also incredible. Nice experience.
+                    </p>
+                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                </div>
+
+                <div class="review-list">
+                    <img src="" alt="">
+                    <h3>Outstanding</h3>
+                    <p class="name">Ilyas Wes</p>
+                    <p>He was punctual and presented an amazing performance during my birthday party.</p>
+                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                </div>
+
+                <div class="review-list">
+                    <img src="" alt="">
+                    <h3>Energetic</h3>
+                    <p class="name">Richard calendar</p>
+                    <p>Great show and very energetic and different from the others. Nice songs.</p>
+                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                </div>
+
+                <div class="review-list">
+                    <img src="" alt="">
+                    <h3>Powerful</h3>
+                    <p class="name">Viola Smith</p>
+                    <p>Very interesting, I celebrated my wedding with them and everybody like it, I recommend.</p>
+                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                </div>
+
+            </div>
+        </div>
+
+    </main>
+
+    <footer>
+        <div class="footerContent">
+
+            <div class="footer-head">
+                <img src="../src/logo2.png" alt="">
+                <p>Your source for artistic excellence, delivering creativity and talent for every occasion.</p>
+                <div class="icons">
+                    <ul>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="quick-links">
+                <p>Quick links</p>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Book an artist</a></li>
+                    <li><a href="#">Join our artist</a></li>
+                </ul>
+            </div>
+            
+            <div class="contact-us">
+                <p>Contact us</p>
+                <ul>
+                    <li><a href="#">1-800-123-4567</a></li>
+                    <li><a href="#">info@artistalley.com</a></li>
+                    <li><a href="#">4878, Main street, Vancouver, BC, V52TP</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </footer>
+
 </body>
+
 </html>
