--- a/html/homepage.html
+++ b/html/homepage.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="../css/homepage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4074409957.js" crossorigin="anonymous"></script>
     <title>Home page</title>
 </head>
@@ -14,10 +17,10 @@
         <div class="logo">Logo</div>
         <nav>
             <ul>
-                <li>Book an Artist</li>
-                <li>Join our artist</li>
-                <li>My Account</li>
-                <li>Login</li>
+                <li><a href="">Book an Artist</a></li>
+                <li><a href="">Join our artist</a></li>
+                <li><a href="">My Account</a></li>
+                <li><a href="">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -26,8 +29,23 @@
 
     <main>
         <section class="hero">
+            <div class="video-container">
 
-            <div class="hero-container">
+                <video controls autoplay muted>
+                    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+                </video>
+                <div class="hero-text-container">
+                    <div class="hero-logo">Logo</div>
+                    <div class="hero-text">
+                        <h3>search, book and make it special</h3>
+                        <p>the best way to book what you want to your event</p>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- <div class="hero-container">
                 <div class="hero-grid">
                     <div class="hero-logo">
                         <h1>ARTIST ALLEY</h1>
@@ -43,137 +61,138 @@
                         <p>efficient management</p>
                     </div>
                 </div>
-                <div class="hero-search-bar">
-                    <!-- <input type="text" placeholder="Search bar"> -->
-                    <input type="text" name="search_query" id="search_query" class="Textbox autobox" value=" " placeholder="Your Text" />
+                
+            </div> -->
+        </section>
+        <div class="hero-search-bar">
+            <input type="text" placeholder="Search bar">
+            <!-- <input type="text" name="search_query" id="search_query" class="Textbox autobox" value=" " placeholder="Your Text" /> -->
 
-                </div>
-            </div>
-
-            </div>
-            <section class="cta-section">
-                <div class="cta">
-                    <div class="cta-image"></div>
+        </div>
+        </section>
+        </div>
+        <section class="book-create-container">
+            <div class="book-container">
+                <!-- <div class="cta-image"></div> -->
+                <div class="book-text">
                     <p>Host or event planner? Book an artist.</p>
-                    <button>Book Now</button>
+                    <button class="btn">Book Now</button>
                 </div>
-                <div class="cta">
-                    <div class="cta-image"></div>
+            </div>
+            <div class="create-container">
+                <!-- <div class="cta-image"></div> -->
+                <div class="create-text">
                     <p>Artist? Show your work! Create your profile.</p>
                     <button>Create Profile</button>
                 </div>
-            </section>
-            <section class="signup-section">
-                <p>New here?</p>
-                <p>Sign up and create your profile</p>
-                <p>Join us! <a href="#">Sign In</a></p>
-            </section>
+            </div>
+        </section>
+        <section class="signup-section">
+            <p>New here? <span class="sign-up"><a href="">Sign up</a> and create your profile</p></span>
+            <p><span class="sign-up">Join us! <a href="#">Sign In</a> </span></p>
+        </section>
 
-            <section class="featured-artists">
-                <h2>Featured Artists</h2>
-                <div class="artist-card">
-                    <div class="article-info">
-                        <p>NAME</p>
-                        <p>INFO</p>
-                        <P>Categories</P>
-                        <p>01 Reviews</p>
-                    </div>
-                    <button class="artist-button">Read More</button>
-                    <img class="artist-image" src="http://picsum.photos/600/200?random=1"></div>
+        <section class="featured-artists">
+            <h2>Featured Artists</h2>
+            <div class="artist-card">
+                <div class="article-info">
+                    <p>Name</p>
+                    <p>Rock</p>
+                    <P>I love to make people happy and bring joy and music to events. I have 1 years of experience as a singer in Vancouver and love rock and roll.</P>
+                    <p>01 Reviews</p>
                 </div>
-                <div class="artist-card">
-                    <div class="article-info">
-                        <p>NAME</p>
-                        <p>INFO</p>
-                        <P>Categories</P>
-                        <p>01 Reviews</p>
-                    </div>
-                    <button class="artist-button">Read More</button>
-                    <img class="artist-image" src="http://picsum.photos/600/200?random=2"></div>
+                <!-- <button class="artist-button">Read More</button> -->
+                <img class="artist-image " src="http://picsum.photos/600/200?random=1">
+            </div>
+
+            </div>
+
+            </div>
+            <div class="artist-card">
+                <div class="article-info">
+                    <p>Name</p>
+                    <p>Rock</p>
+                    <P>I love to make people happy and bring joy and music to events. I have 1 years of experience as a singer in Vancouver and love rock and roll.</P>
+                    <p>01 Reviews</p>
                 </div>
-                <div class="artist-card">
-                    <div class="article-info">
-                        <p>NAME</p>
-                        <p>INFO</p>
-                        <P>Categories</P>
-                        <p>01 Reviews</p>
-                    </div>
-                    <button class="artist-button">Read More</button>
-                    <img class="artist-image" src="http://picsum.photos/600/200?random=3"></div>
-                </div>
-                <div class="artist-card">
-                    <div class="article-info">
-                        <p>NAME</p>
-                        <p>INFO</p>
-                        <P>Categories</P>
-                        <p>01 Reviews</p>
-                    </div>
-                    <button class="artist-button">Read More</button>
-                    <img class="artist-image" src="http://picsum.photos/600/200?random=4"></div>
-                </div>
-                <div class="artist-card">
-                    <div class="article-info">
-                        <p>NAME</p>
-                        <p>INFO</p>
-                        <P>Categories</P>
-                        <p>01 Reviews</p>
-                    </div>
-                    <button class="artist-button">Read More</button>
-                    <img class="artist-image" src="http://picsum.photos/600/200?random=5"></div>
+                <!-- <button class="artist-button">Read More</button> -->
+                <img class="artist-image " src="http://picsum.photos/600/200?random=3">
+            </div>
+
+            </div>
+            <div class="artist-card">
+                <div class="article-info">
+                    <p>Name</p>
+                    <p>Rock</p>
+                    <P>I love to make people happy and bring joy and music to events. I have 1 years of experience as a singer in Vancouver and love rock and roll.</P>
+                    <p>01 Reviews</p>
                 </div>
 
+                <img class="artist-image " src="http://picsum.photos/600/200?random=2">
+            </div>
 
 
+
+            </div>
+        </section>
+
+        <section class="featured-videos">
+
+            <h2>Featured Videos</h2>
+
+            <div class="video-card-1">
+                <div class="video-info">
+                    <p>Name</p>
+                    <p>Rock</p>
+                    <P>I love to make people happy and bring joy and music to events. I have 13 years as a singer in Vancouver and love rock and roll.</P>
+                    <p>14 Reviews</p>
                 </div>
 
-
-
-
-                <div class="featured-videos">
-                    <h2>Featured Videos</h2>
-                    <div class="video-card">
-                        <div class="video-info">
-                            <p>NAME</p>
-                            <p>INFO</p>
-                            <P>Categories</P>
-                            <p>01 Reviews</p>
-
-                        </div>
-                        <div class="video-icon">
-                            <i class="fa-solid fa-play"></i>
-                            <!-- <div class="video-video" src="http://picsum.photos/600/200?random=1"></div> -->
-                        </div>
-
-                    </div>
-                    <div class="video-card">
-                        <div class="video-info">
-                            <p>NAME</p>
-                            <p>INFO</p>
-                            <P>Categories</P>
-                            <p>01 Reviews</p>
-
-                        </div>
-                        <div class="video-icon">
-                            <i class="fa-solid fa-play"></i>
-                            <!-- <div class="video-video" src="http://picsum.photos/600/200?random=1"></div> -->
-                        </div>
-
-                    </div>
-                    
+                <img class="video-video" src="http://picsum.photos/600/200?random=2">
+            </div>
+            <div class="video-card-2">
+                <div class="video-info">
+                    <p>Name</p>
+                    <p>Rock</p>
+                    <P>I love to make people happy and bring joy and music to events. I have 13 years as a singer in Vancouver and love rock and roll.</P>
+                    <p>14 Reviews</p>
                 </div>
-            </section>
 
-            <footer>
+                <img class="video-video" src="http://picsum.photos/600/600?random=4">
+            </div>
 
-                <nav class="footer-nav">
-                    <ul>
-                        <li><a href="">FAQ</a></li>
-                        <li><a href="">Privacy Terms</a></li>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Contact Us</a></li>
-                    </ul>
-                </nav>
-            </footer>
+
+            <!-- <div class="video-card">
+                 <div class="video-info">
+                    <p>NAME</p>
+                    <p>INFO</p>
+                    <P>Categories</P>
+                    <p>01 Reviews</p>
+
+                </div>
+                <div class="video-icon">
+                    <i class="fa-solid fa-play"></i>
+                    <div class="video-video" src="http://picsum.photos/600/200?random=1"></div>
+                </div>
+
+            </div> -->
+
+
+
+        </section>
+
+
+        <footer>
+
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Privacy Terms</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </nav>
+        </footer>
 </body>
 
 </html>
