image upload on firebase

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -12,6 +12,11 @@
     <main> 
         <h1>Welcome to Artist Alley!</h1><br>
         <div id="user"></div>
+
+        <div class="portfolio">
+            <button id="portfolioBtn">My Portfolio</button>
+        </div>
+
         <div class="logout">
             <button id="logoutBtn">Logout</button>
         </div>
