--- a/html/user-info.html
+++ b/html/user-info.html
@@ -13,8 +13,11 @@
     <main>
         <h1> Let's get to know you better!</h1>
         <div class="user-avatar">
-            <img id="profile-pic" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="user photo">
-            <input type="file" id="captureBtn" accept="image/*">
+            <img id="profile-pic"
+                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="user photo">
+            <input type="file" id="imageInput" accept="image/*">
+            <input type="button" id="uploadImageBtn" value="Upload">
         </div>
         <div class="user-info">
             <label class="label" for="stage-name">Stage Name: </label>
@@ -38,6 +41,11 @@
 
             <label class="label" for="summary">Introduce yourself (max 120 words):</label>
             <textarea type="text" id="summary" class="inputField" minlength="10" required> </textarea>
+
+            <input type="file" id="portfolioImageInput" accept="image/*" multiple>
+            <div id="portfolio-images">
+            </div>
+            <input type="button" id="uploadPortfolioImageBtn" value="Upload All">
 
             <input id="saveBtn" type="submit" value="Save">
         </div>
