--- a/html/profile-artist-home.html
+++ b/html/profile-artist-home.html
@@ -48,37 +48,39 @@
     </header>
 
     <Main class="profileArtist">
-        <div class="artistInfo">
-            <div class="artistInfoDesc">
-                <div class="artistImage">
-                    <img src="../src/Artist.png" alt="Artist Image">
+        <div class="artistInfoWrapper">
+            <div class="artistInfo">
+                <div class="artistInfoDesc">
+                    <div class="artistImage">
+                        <img src="../src/Artist.png" alt="Artist Image">
+                    </div>
+                    <div class="artistReviewStar">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
+                    <p id="artistDescription">Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances and soulful sound.</p>
                 </div>
-                <div class="artistReviewStar">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                <p>Pricing starts at: <span id="artistPrice">$125</span></p>
+                <p>Pick me for: <span id="artistCategory">Rock and Jazz</span></p>
+                <p>Location: <span id="artistLocation">Vancouver, BC</span></p>
+                <div>
+                    <div class="channels">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-spotify"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
+                        </ul>
+                        <p>My Channels</p>
+                    </div>
                 </div>
-                <p id="artistDescription">Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances and soulful sound.</p>
             </div>
-            <p>Pricing starts at: <span id="artistPrice">$125</span></p>
-            <p>Pick me for: <span id="artistCategory">Rock and Jazz</span></p>
-            <p>Location: <span id="artistLocation">Vancouver, BC</span></p>
-            <div>
-                <div class="channels">
-                    <ul>
-                        <li><a href="#"><i class="fa-brands fa-spotify"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
-                    </ul>
-                    <p>My Channels</p>
-                </div>
-            </div>
-        </div>
 
-        <div class="artistPerformance">
-            <h2>About my Performance:</h2>
-            <p>I love to dance and bring my culture to events and parties, dancing is my passion and I use traditional dances from Spain and South America to create my own coreographies. My show is 2 hours long but I can addapt according to the occasion and necessity. I have my own setting of music and car for transportation is included.</p>
-            <ul>
-                <li><a href="#">Check calendar</a></li>
-                <li><a href="#">Book</a></li>
-            </ul>
+            <div class="artistPerformance">
+                <h2>About my Performance:</h2>
+                <p>I love to dance and bring my culture to events and parties, dancing is my passion and I use traditional dances from Spain and South America to create my own coreographies. My show is 2 hours long but I can addapt according to the occasion and necessity. I have my own setting of music and car for transportation is included.</p>
+                <ul>
+                    <li><a href="#">Check calendar</a></li>
+                    <li><a href="#">Book</a></li>
+                </ul>
+            </div>
         </div>
 
         <div class="ArtistGallery">
