--- a/html/parul-book-success.html
+++ b/html/parul-book-success.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking Successful</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/parul.css">
 </head>
+
 <body>
 
-    <main>
+    <main class="success-main">
         <div class="book-success">
             <h3>Booking Successfully Completed!</h3>
             <p>We are happy to help you with the best management for your event!</p>
         </div>
 
         <div class="new-search">
-            <a href="#">New search</a>
+            <a href="#" class="button-search">New search</a>
+            <a href="./parul.html" class="close-icon"><i class="fa-solid fa-x"></i></a>
         </div>
-        <a href="./parul.html"><i class="fa-solid fa-x"></i></a>
+
     </main>
-    
+
 </body>
+
 </html>
