--- a/html/parul-calendar.html
+++ b/html/parul-calendar.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <main>
+    <main class="calendar-body">
         <div class="calendar-main">
             <div class="calendar-head">
                 <h2>Calendar</h2>
@@ -29,13 +29,13 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Sunday</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
+                            <th>S</th>
+                            <th>M</th>
+                            <th>T</th>
+                            <th>W</th>
+                            <th>T</th>
+                            <th>F</th>
+                            <th>S</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -83,10 +83,6 @@
                             <td>29</td>
                             <td>30</td>
                             <td>31</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
                         </tr>
 
                     </tbody>
