--- a/html/parul.html
+++ b/html/parul.html
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="../css/parul.css">
+
+    <link rel="stylesheet" href="../css/parul.css">
+
+    <link rel="stylesheet" href="../css/variables.css">
+
 </head>
 
-<body>
+<body id="top">
     <header>
 
         <div class="headerContent">
@@ -31,13 +35,13 @@
                         <li class="login-btn"><a href="">Login</a></li>
                     </ul>
                 </nav>
-                <div class="search"><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></div>
+                <div class="search"><a href="#">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
                 <div class="menuBtn">
                     <a href="#"><i class="fa-solid fa-bars"></i></a>
                 </div>
             </div>
 
-            <h2>Artist Profile <span>John Doe</span></h2>
+            <h2>Artist Profile <br><span>John Doe</span></h2>
 
         </div>
 
@@ -51,11 +55,14 @@
 
                 <div class="about-artist">
 
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
-                        class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <div class="icons-grp">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
 
                     <div class="artist-briefing">
-                        <img src="" alt="">
+                        <img src="../src/hector-bermudez-iIWDt0fXa84-unsplash.jpg" alt="">
                         <p>Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances and
                             soulful
                             sound.</p>
@@ -69,69 +76,82 @@
 
                 </div>
                 <div class="artist-perf">
+                    <h3>About my performance:</h3>
                     <p>I have more 15 years of experience being part of some well reconized bands and making
                         presentatiosn
                         around the country. I'm a dinamyc and versatile guitarist known for my electrifying performances
                         and
                         soulful sound. I have my own equipment and transportation.</p>
 
-                    <a href="./parul-calendar.html">Check calendar</a>
-                    <a href="./parul-booking.html">Book</a>
-                </div>
-
-                <div class="artist-work">
-                    <div class="images">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                    </div>
-                </div>
-                <div class="chatBtn">
-                    <a href="./book-chat.html">Chat</a>
+                    <a href="./parul-calendar.html" class="check">Check calendar</a>
+                    <a href="./parul-booking.html" class="book-artist">Book</a>
                 </div>
             </div>
+            <div class="artist-work">
+                <div class="images">
+                    <img src="../src/jorge-gordo-W2UH8LdD3Tc-unsplash.jpg" alt="">
+                    <img src="../src/lachy-spratt-iJ9B3wegKsU-unsplash.jpg" alt="">
+                    <img src="../src/markus-spiske-w092hO6E96M-unsplash.jpg" alt="">
+                    <img src="../src/gary-ellis-XtZvUJ0YYHg-unsplash.jpg" alt="">
 
-            <div class="artist-reviews">
-                <h2>Reviews</h2>
-
-                <div class="review-list">
-                    <img src="" alt="">
-                    <h3>Amazing</h3>
-                    <p class="name">Amanda Banes</p>
-                    <p>Loved the energy and songs. My guests loved it, the music is also incredible. Nice experience.
-                    </p>
-                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
                 </div>
+                <!-- <div class="view-album">
+                    <a href=#>View Album</a>
+                </div> -->
+            </div>
 
-                <div class="review-list">
-                    <img src="" alt="">
-                    <h3>Outstanding</h3>
-                    <p class="name">Ilyas Wes</p>
-                    <p>He was punctual and presented an amazing performance during my birthday party.</p>
-                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
-                </div>
-
-                <div class="review-list">
-                    <img src="" alt="">
-                    <h3>Energetic</h3>
-                    <p class="name">Richard calendar</p>
-                    <p>Great show and very energetic and different from the others. Nice songs.</p>
-                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
-                </div>
-
-                <div class="review-list">
-                    <img src="" alt="">
-                    <h3>Powerful</h3>
-                    <p class="name">Viola Smith</p>
-                    <p>Very interesting, I celebrated my wedding with them and everybody like it, I recommend.</p>
-                    <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
-                </div>
-
+            <div class="chatBtn">
+                <a href="./book-chat.html">Chat</a>
             </div>
         </div>
 
+        <div class="artist-reviews">
+            <h2>Reviews</h2>
+
+            <div class="review-list">
+                <img src="../src/person-1.jpg" alt="">
+                <h3>"Amazing"</h3>
+                <p class="name">Amanda Banes</p>
+                <p>Loved the energy and songs. My guests loved it, the music is also incredible. Nice experience.
+                </p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-2.jpg" alt="">
+                <h3>"Outstanding"</h3>
+                <p class="name">Ilyas Wes</p>
+                <p>He was punctual and presented an amazing performance during my birthday party.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-3.jpg" alt="">
+                <h3>"Energetic"</h3>
+                <p class="name">Richard calendar</p>
+                <p>Great show and very energetic and different from the others. Nice songs.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-4.jpg" alt="">
+                <h3>"Powerful"</h3>
+                <p class="name">Viola Smith</p>
+                <p>Very interesting, I celebrated my wedding with them and everybody like it, I recommend.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+        </div>
+        </div>
+
+        <div class="top-btn">
+            <a href="#top">
+                <img src="../src/Up icon.png" alt="top-btn">
+            </a>
+        </div>
+
     </main>
+
 
     <footer>
         <div class="footerContent">
@@ -158,7 +178,7 @@
                     <li><a href="#">Join our artist</a></li>
                 </ul>
             </div>
-            
+
             <div class="contact-us">
                 <p>Contact us</p>
                 <ul>
@@ -166,6 +186,10 @@
                     <li><a href="#">info@artistalley.com</a></li>
                     <li><a href="#">4878, Main street, Vancouver, BC, V52TP</a></li>
                 </ul>
+            </div>
+
+            <div class="copyright">
+                <p>&copy; 2024 Artist Alley. All rights reserved. | privacy Policy | Terms of Service</p>
             </div>
 
         </div>
