--- a/html/homepage.html
+++ b/html/homepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/homepage.css">
-    <script type="module" src="../js/homepage.js" defer></script>
+    <script type="module" src="../javascript/homepage.js" defer></script>
 </head>
 <body>
 
