--- a/html/my-portfolio.html
+++ b/html/my-portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="../css/my-portfolio.css">
-    <script type="module" src="../js/my-portfolio.js" defer></script>
+    <script type="module" src="../javascript/my-portfolio.js" defer></script>
 </head>
 
 <body>
