--- a/html/signup.html
+++ b/html/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="../css/signup.css">
-    <script type="module" src="../js/signup.js" defer></script>
+    <script type="module" src="../javascript/signup.js" defer></script>
 </head>
 <body>
 
