--- a/html/user-info.html
+++ b/html/user-info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info</title>
     <link rel="stylesheet" href="../css/user-info.css">
-    <script type="module" src="../js/user-info.js" defer></script>
+    <script type="module" src="../javascript/user-info.js" defer></script>
 </head>
 
 <body>
