--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Alley</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/index.js" defer></script>
+    <script src="./javascript/index.js" defer></script>
 </head>
 <body>
     <header>
