alpha merge soud & kapil

--- a/index.html
+++ b/index.html
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Alley</title>
-    <link rel="stylesheet" href="./style.css">
-    <script defer type="module" src="./app.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./javascript/index.js" defer></script>
 </head>
-
 <body>
-    <header></header>
-    <main>
+    <header>
 
-        <div class="login">
-            <section class="login">
-                <!-- Login Form -->
-                <form id="login-form">
-                    <input type="email" id="login-email" placeholder="Email">
-                    <input type="password" id="login-password" placeholder="Password">
-                    <button type="submit">Log In</button>
-                </form>
+    </header>
 
-            </section>
-            <section class="signup">
-                <!-- Sign-up Form -->
-                <form id="signup-form">
-                    <input type="email" id="signup-email" placeholder="Email">
-                    <input type="password" id="signup-password" placeholder="Password">
-                    <button type="submit">Sign Up</button>
-                </form>
-            </section>
-        </div>
+    <body>
+        <main>
+            <h1>Artist Alley - Find, Book & Celibrate</h1>
+            <input id="loginBtn" type="button" value="Login">
+            <input id="signupBtn" type="button" value="Signup">
+        </main>
+    </body>
 
-        <!-- <h1>Firebase CRUD Example</h1>
-        <button onclick="addDocument()">Add Document</button>
-        <button onclick="getDocuments()">Get Documents</button>
-        <button onclick="updateDocument('DOCUMENT_ID')">Update Document</button>
-        <button onclick="deleteDocument('DOCUMENT_ID')">Delete Document</button>
+    <footer>
 
-        <div id="content"></div> -->
-    </main>
-    <footer></footer>
+    </footer>
 </body>
-
 </html>
