multiple changes by soud

--- a/html/demo_book.html
+++ b/html/demo_book.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<script type="module" src="../javascript/utilities.js"></script>
 <!-- by Soud -->
 
 <head>
@@ -7,15 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Booking</title>
     <link rel="stylesheet" href="../css/demo_book.css">
+    <link rel="stylesheet" href="../css/headerstyle.css">
     <script type="module" src="../javascript/booking.js" defer></script>
 </head>
 
 <body>
     <header>
-        <h1>My Booking Dashboard</h1>
+        <h1>Artist Alley</h1>
         <nav>
             <ul>
+                <li><a href="../html/homepage.html">Home</a></li>
+                <li><a href="../html/demo_book.html">Booking</a></li>
                 <li><a href="../html/demo_chat.html">chat</a></li>
+                <li><a href="" id="myProfile">profile</a></li>
+                <li><a href="" id="logoutBtn">logout</a></li>
             </ul>
         </nav>
     </header>
