--- a/html/demo_chat.html
+++ b/html/demo_chat.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Chats</title>
     <link rel="stylesheet" href="../css/demo_chat.css">
-    <script type="module" src="../javascript/chat.js"></script>
+    <link rel="stylesheet" href="../css/headerstyle.css">
+    <script type="module" src="../javascript/chat.js" defer></script>
 </head>
 
 <body>
     <header>
-        <h1>My Chat's</h1>
+        <h1>Artist Alley</h1>
         <nav>
             <ul>
-                <li><a href="../html/demo_book.html">My Account</a></li>
+                <li><a href="../html/homepage.html">Home</a></li>
+                <li><a href="../html/demo_book.html">Booking</a></li>
+                <li><a href="../html/demo_chat.html">chat</a></li>
+                <li><a href="" id="myProfile">profile</a></li>
+                <li><a href="" id="logoutBtn">logout</a></li>
             </ul>
         </nav>
     </header>
