logout js file by soud

--- a/html/demo_chat.html
+++ b/html/demo_chat.html
@@ -7,6 +7,8 @@
     <title>My Chats</title>
     <link rel="stylesheet" href="../css/demo_chat.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+
+    <script type="module" src="../javascript/logout.js" defer></script>
     <script type="module" src="../javascript/chat.js" defer></script>
 </head>
 
