--- a/html/homepage.html
+++ b/html/homepage.html
@@ -7,6 +7,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+    <script type="module" src="../javascript/logout.js" defer></script>
     <script type="module" src="../javascript/homepage.js" defer></script>
 </head>
 
