--- a/html/homepage.html
+++ b/html/homepage.html
@@ -7,6 +7,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+    <script type="module" src="../javascript/search.js"></script>
     <script type="module" src="../javascript/logout.js" defer></script>
     <script type="module" src="../javascript/homepage.js" defer></script>
 </head>
@@ -32,8 +33,8 @@
             <button type="button" id="searchButton">Search</button>
         </div>
 
-        <!-- Search Results List -->
-        <div id="searchList"></div>
+        <!-- Search Results Results -->
+        <div id="searchResults"></div>
 
         <!-- <div class="searchList"></div>
         <h1>Welcome to Artist Alley!</h1><br>
