add my account section for both users and minor changes for file names

--- a/html/demo_book.html
+++ b/html/demo_book.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <script type="module" src="../javascript/utilities.js"></script>
-<script type="module" src="../javascript/logout.js"></script>
 <!-- by Soud -->
 
 <head>
@@ -10,7 +9,7 @@
     <title>My Booking</title>
     <link rel="stylesheet" href="../css/demo_book.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
-    <script type="module" src="../javascript/logout.js" defer></script>
+    <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/booking.js" defer></script>
 </head>
 
