--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info</title>
-    <link rel="stylesheet" href="../css/user-info.css">
-    <script type="module" src="../javascript/user-info.js" defer></script>
+    <link rel="stylesheet" href="../css/artist-portfolio.css">
+    <script type="module" src="../javascript/artists-portfolio.js" defer></script>
 </head>
 
 <body>
