--- a/html/demo_chat.html
+++ b/html/demo_chat.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/demo_chat.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
 
-    <script type="module" src="../javascript/logout.js" defer></script>
+    <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/chat.js" defer></script>
 </head>
 
