search is now working

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -7,9 +7,11 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/my-search.css">
 
     <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/homepage.js" defer></script>
+    <script type="module" src="../javascript/search.js" defer></script>
 
 </head>
 
