--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -28,18 +28,40 @@
     </header>
     <main>
         <div class="user-data">
+            <h1>Complete Your Profile</h1>
+
             <div class="user-avatar">
-                <img id="profile-image" alt="user avatar">
+                <img
+                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                id="profile-image" alt="user avatar">
             </div>
-            <div class="info" id="info">
-
+            <input id="start-camera" type="button" value="Start Camera">
+            <div id="camera">
+                <video id="webcam" autoplay playsinline width="320" height="240"></video>
+                <button id="capture">Capture</button>
             </div>
-
-            <h1>Webcam Capture</h1>
-            <video id="webcam" autoplay playsinline width="320" height="240"></video>
-            <button id="capture">Capture</button>
 
             <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
+
+            <div class="user-info">
+                <label class="label" for="fName">First Name:</label>
+                <input type="text" id="fName" class="inputField">
+
+                <label class="label" for="lName">Last Name:</label>
+                <input type="text" id="lName" class="inputField">
+
+                <label class="label" for="orgName">Organisation Name:</label>
+                <input type="text" id="orgName" class="inputField">
+
+                <label class="label" for="role">Role:</label>
+                <input type="text" id="role" class="inputField">
+
+                <label class="label" for="summary">Introduce yourself (max 120 words):</label>
+                <textarea type="text" id="summary" class="inputField" minlength="10" required> </textarea>
+            </div>
+
+            <input id="saveBtn" type="submit" value="Save">
+
         </div>
     </main>
 </body>
