--- a/html/demo_book.html
+++ b/html/demo_book.html
@@ -28,20 +28,14 @@
     </header>
     <main>
         <div class="container">
-
-            <!-- Search Bar -->
-            <div class="search-container">
-                <input type="text" id="searchInput" placeholder="Search...">
-                <button type="button" id="searchButton">Search</button>
-            </div>
             <!-- button's -->
-            <div class="myButtonDiv">
+            <!-- <div class="myButtonDiv">
                 <button onclick="makeRequest()">Make request</button>
-            </div>
+            </div> -->
             <!-- booking content -->
             <div class="booking-content-wrapper">
                 <div class="request-div">
-                    <h2>Request:</h2>
+                    <h2>Request Pending:</h2>
                     <div id="request-view">
                         <!-- Booking items will be dynamically added here -->
                     </div>
