--- a/html/signin.html
+++ b/html/signin.html
@@ -34,7 +34,7 @@
                   <li><a href="#">About us</a></li>
                   <li><a href="#">Book an artist</a></li>
                   <li><a href="#">Join our artist</a></li>
-                  <li><a href="#">Login</a></li>
+                  <li><a href="./signin.html">Login</a></li>
               </ul>
           </nav>
 
@@ -55,8 +55,8 @@
 
          <div class="loginAccount">
             <ul>
-               <li class="loginLink"><a href="#">Login</a></li>
-               <li><a href="#">Create Account</a></li>
+               <li class="loginLink"><a href="./signin.html">Login</a></li>
+               <li><a href="./signup.html">Create Account</a></li>
             </ul>
          </div>  
          
@@ -75,9 +75,8 @@
             </div>
 
             <div class="forgotPass">
-               <p>Forgot password?</p>
                <ul>
-                  <li><a href="#">Reset your password</a></li>
+                  <li>Forgot password? <a href="#">Reset your password</a></li>
                </ul>
             </div>
 
@@ -96,7 +95,7 @@
             </div>
             <div class="signup">
                <ul>
-                  <li>Don't have an account? <a href="#">Sign up</a></li>
+                  <li>Don't have an account? <a href="./signup.html">Sign up</a></li>
                </ul>
             </div>
          
