--- a/html/signup-code.html
+++ b/html/signup-code.html
@@ -34,7 +34,7 @@
                   <li><a href="#">About us</a></li>
                   <li><a href="#">Book an artist</a></li>
                   <li><a href="#">Join our artist</a></li>
-                  <li><a href="#">Login</a></li>
+                  <li><a href="./signin.html">Login</a></li>
               </ul>
           </nav>
 
@@ -54,8 +54,8 @@
 
         <div class="loginAccount">
            <ul>
-              <li class="loginLink"><a href="#">Login</a></li>
-              <li class="createLink"><a href="#">Create Account</a></li>
+              <li class="loginLink"><a href="./signin.html">Login</a></li>
+              <li class="createLink"><a href="./signup.html">Create Account</a></li>
            </ul>
         </div>  
         
