fix for user not going to their profile section on clicking the profile button

--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/artist-portfolio.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
 
+    <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/artists-portfolio.js" defer></script>
 </head>
 
